--- a/package.json
+++ b/package.json
@@ -6,10 +6,27 @@
   "author": "EmilSchroder <eschro66@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node server"
+    "start": "node server",
+    "webpack": "webpack --watch"
   },
-  "dependencies": {
-    "express": "^4.16.4",
-    "path": "^0.12.7"
-  }
+"dependencies": {
+  "babel-core": "^6.26.0",
+  "babel-loader": "^7.1.2",
+  "babel-plugin-transform-class-properties": "^6.24.1",
+  "babel-plugin-transform-object-rest-spread": "^6.26.0",
+  "babel-preset-env": "^1.6.1",
+  "babel-preset-react": "^6.24.1",
+  "express": "^4.16.2",
+  "react": "^16.2.0",
+  "react-dom": "^16.2.0",
+  "react-redux": "^5.0.7",
+  "react-router-dom": "^4.3.1",
+  "redux": "^4.0.0",
+  "redux-thunk": "^2.3.0",
+  "superagent": "^4.0.0-beta.5",
+  "webpack": "^3.10.0"
+},
+"devDependencies": {
+  "webpack-dev-server": "^2.11.1"
+}
 }
