--- a/package.json
+++ b/package.json
@@ -10,14 +10,10 @@
     "webpack": "webpack --watch"
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "clipboard": "^2.0.4",
-    "express": "^4.16.2",
+    "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^2.11.1",
     "prop-types": "^15.6.2",
     "react": "^16.2.0",
     "react-clipboard.js": "^2.0.2",
@@ -30,9 +26,13 @@
     "styled-components": "^4.1.1",
     "superagent": "^4.0.0-beta.5",
     "typed.js": "^2.0.9",
-    "webpack": "^3.10.0"
-  },
-  "devDependencies": {
-    "webpack-dev-server": "^2.11.1"
+    "webpack": "^3.10.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "clipboard": "^2.0.4"
   }
 }
